--- a/package.json
+++ b/package.json
@@ -8,22 +8,20 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node build/dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:unit": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "npm run typeorm migration:run -- -d ./src/database/config/typeorm.config.ts",
-    "migration:generate": "npm run typeorm -- -d ./src/database/config/typeorm.config.ts migration:generate ./src/database/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm migration:run -- -d ./src/database/config/typeorm-migrate.config.ts",
+    "migration:generate": "npm run typeorm -- -d ./src/database/config/typeorm-migrate.config.ts migration:generate ./src/database/migrations/$npm_config_name",
     "migration:create": "npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
-    "migration:revert": "npm run typeorm -- -d ./src/database/config/typeorm.config.ts migration:revert"
+    "migration:revert": "npm run typeorm -- -d ./src/database/config/typeorm-migrate.config.ts migration:revert"
   },
   "dependencies": {
     "@faker-js/faker": "^8.1.0",
@@ -74,10 +72,8 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-nestjs": "^0.7.3",
     "jest": "28.1.3",
-    "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
