--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_REQUEST_TIMEOUT=1000
 
 DB_HOST="10.10.179.110"
 DB_PORT=5432
-DB_USER="test"
-DB_PASSWORD="ah&aiheePhah9Gei"
+DB_USER="root"
+DB_PASSWORD="root"
 DB_NAME="test-typeorm"
 DB_DRIVER="postgres"
   
