--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.7.2",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "typeorm-extension": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.17",
@@ -74,6 +75,7 @@
     "eslint": "^8.0.1",
     "eslint-config-nestjs": "^0.7.3",
     "jest": "28.1.3",
+    "nestjs-seeder": "^0.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
