--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 APP_PORT=3000
 APP_REQUEST_TIMEOUT=1000
 
-DB_HOST="localhost"
+DB_HOST="10.10.179.110"
 DB_PORT=5432
 DB_USER="test"
-DB_PASSWORD="test"
+DB_PASSWORD="ah&aiheePhah9Gei"
 DB_NAME="test-typeorm"
 DB_DRIVER="postgres"
   
