--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "is-valid-hostname": "^1.0.2",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
+    "nest-csv-parser": "^2.0.4",
     "nestjs-typeorm-paginate": "^4.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
