--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_PORT=3000
 APP_REQUEST_TIMEOUT=1000
 
-DB_HOST="10.10.179.110"
+DB_HOST="localhost"
 DB_PORT=5432
 DB_USER="test"
 DB_PASSWORD="ah&aiheePhah9Gei"
