--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.1.0",
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.6",
@@ -48,6 +49,7 @@
     "@types/passport": "^1.0.13",
     "axios": "^1.5.0",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^5.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
