Add env for custom logger

--- a/.env
+++ b/.env
@@ -1,13 +1,19 @@
 APP_PORT=3000
 APP_REQUEST_TIMEOUT=1000
 
+APP_LOG_CUSTOM=true
+APP_LOG_ERROR_FILENAME="logs/error.log"
+APP_LOG_ERROR_MAX_FILES="30d"
+APP_LOG_ALL_FILENAME="logs/all.log"
+APP_LOG_ALL_MAX_FILES="30d"
+
 DB_HOST="localhost"
 DB_PORT=5432
 DB_USER="test"
-DB_PASSWORD="ah&aiheePhah9Gei"
+DB_PASSWORD="test"
 DB_NAME="test-typeorm"
 DB_DRIVER="postgres"
-  
+
 JWT_TOKEN_EXPIRES_IN=3600
 JWT_SECRET_KEY="secret"
 
