--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/swagger": "^7.1.11",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.6",
+    "@prisma/client": "^5.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/passport": "^1.0.13",
@@ -91,6 +92,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "28.1.3",
+    "prisma": "^5.5.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
