--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.5",
     "@nestjs/platform-socket.io": "^10.2.6",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.1.11",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.6",
