Cron - remove old temp files

--- a/src/config/json-config.json
+++ b/src/config/json-config.json
@@ -30,6 +30,8 @@
   },
   "files": {
     "uploadDirectory": "uploads",
+    "uploadTempDirectory": "uploads/tmp",
+    "uploadTempLifetime": 60,
     "maxFileSize": 10000000
   },
   "docs": {
