add docker compose(nest, postgres, redis) and caching using redis

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_PORT=3000
+APP_PORT=3001
 APP_REQUEST_TIMEOUT=1000
 
-APP_LOG_CUSTOM=true
+APP_LOG_CUSTOM=false
 APP_LOG_ERROR_FILENAME="logs/error.log"
 APP_LOG_ERROR_MAX_FILES="30d"
 APP_LOG_ALL_FILENAME="logs/all.log"
@@ -11,11 +11,20 @@ DB_HOST="localhost"
 DB_PORT=5432
 DB_USER="test"
 DB_PASSWORD="test"
-DB_NAME="test-typeorm"
+DB_NAME="test"
 DB_DRIVER="postgres"
+
+REDIS_HOST=cache
+REDIS_PORT=6379
+REDIS_PASSWORD="eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"
 
 JWT_TOKEN_EXPIRES_IN=3600
 JWT_SECRET_KEY="secret"
+
+FILES_UPLOAD_DIR="uploads"
+FILES_UPLOAD_TEMP_DIR="uploads/tmp"
+FILES_UPLOAD_TEMP_LIFETIME=60
+FILES_MAX_SIZE=1000000
 
 DOCS_GENERATE=true
 DOCS_PATH="docs"
