--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "@nestjs/websockets": "^10.2.6",
     "@prisma/client": "^5.5.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^4.0.5",
     "@types/express": "^4.17.13",
     "@types/passport": "^1.0.13",
     "axios": "^1.5.0",
     "bcrypt": "^5.0.1",
     "cache-manager": "^5.2.4",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
@@ -82,6 +84,7 @@
     "@nestjs/cli": "^10.1.17",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.5",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/faker": "^6.6.9",
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.10",
@@ -96,7 +99,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "28.1.3",
-    "prisma": "^5.5.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
