--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_PORT=3001
+APP_PORT=3000
 APP_REQUEST_TIMEOUT=1000
 
 APP_LOG_CUSTOM=false
@@ -7,16 +7,21 @@ APP_LOG_ERROR_MAX_FILES="30d"
 APP_LOG_ALL_FILENAME="logs/all.log"
 APP_LOG_ALL_MAX_FILES="30d"
 
-DB_HOST="localhost"
+DB_HOST="postgres"
 DB_PORT=5432
 DB_USER="test"
 DB_PASSWORD="test"
 DB_NAME="test"
 DB_DRIVER="postgres"
 
+MONGO_HOST="mongo"
+MONGO_PORT=27017
+MONGO_USER=
+MONGO_PASSWORD=
+MONGO_DB_NAME="test"
+
 REDIS_HOST=cache
 REDIS_PORT=6379
-REDIS_PASSWORD="eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"
 
 JWT_TOKEN_EXPIRES_IN=3600
 JWT_SECRET_KEY="secret"
