--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.5",
     "@nestjs/platform-socket.io": "^10.2.6",
@@ -50,6 +51,8 @@
     "@types/cache-manager": "^4.0.5",
     "@types/express": "^4.17.13",
     "@types/passport": "^1.0.13",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "axios": "^1.5.0",
     "bcrypt": "^5.0.1",
     "cache-manager": "^5.2.4",
@@ -60,6 +63,7 @@
     "dotenv": "^16.0.3",
     "is-valid-hostname": "^1.0.2",
     "moment": "^2.29.4",
+    "mongoose": "^8.0.1",
     "move-file": "^3.1.0",
     "mysql2": "^2.3.3",
     "nest-csv-parser": "^2.0.4",
