Start working with RabbitMQ

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,9 @@ services:
   rabbitmq:
     image: rabbitmq:management
     container_name: rabbitmq
+    environment:
+      - RABBITMQ_DEFAULT_USER=test
+      - RABBITMQ_DEFAULT_PASS=test
     restart: always
     ports:
       - "5672:5672"
@@ -45,18 +48,18 @@ services:
     networks:
       - nest-init
 
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    container_name: nest-pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=pgadmin4
-    ports:
-      - '5050:80'
-    depends_on:
-      - postgres
-      - redis
+#  pgadmin:
+#    image: dpage/pgadmin4
+#    restart: always
+#    container_name: nest-pgadmin4
+#    environment:
+#      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+#      - PGADMIN_DEFAULT_PASSWORD=pgadmin4
+#    ports:
+#      - '5050:80'
+#    depends_on:
+#      - postgres
+#      - redis
 
   app:
     build:
